<?xml version="1.0" encoding="utf-8"?>

    <!--
    FILE:   activity_main.xml

    NAME:   NICK CONNELL
    ID:     S1623944

    FILE FOR LAUNCHER ACTIVITY AND MAIN SCREEN OF APPLICATION
    -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nick.testapplication.MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="69dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/lblWelcome"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:text="@string/welcomeMessage"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lblInstructions"
            android:layout_width="wrap_content"
            android:layout_height="118dp"
            android:text="@string/instructions"
            android:textAlignment="center"
            android:textColor="@color/headerBackground"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnCurrentIncidents"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:onClick="CurrentIncidents"
            android:text="@string/btnCurrentIncidents"
            android:textColor="@color/headerBackground" />

        <Button
            android:id="@+id/btnRoadWorks"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:onClick="RoadWorks"
            android:text="@string/btnRoadworks"
            android:textColor="@color/headerBackground" />

        <Button
            android:id="@+id/btnPlannedRoadWorks"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:onClick="PlannedRoadWorks"
            android:text="@string/btnPlannedRoadWorks"
            android:textColor="@color/headerBackground" />

        <Button
            android:id="@+id/btnFloodline"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:onClick="Floodline"
            android:text="@string/btnFloodline"
            android:textColor="@color/headerBackground" />

        <Button
            android:id="@+id/btnPlanYourTrip"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:onClick="PlanYourTJourney"
            android:text="@string/btnPlanTrip"
            android:textColor="@color/headerBackground" />

        <TextView
            android:id="@+id/lblNameSID"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:background="@color/colorPrimary"
            android:text="@string/lblNameSID"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
