<?xml version="1.0" encoding="utf-8"?>

    <!--
    FILE:   activity_road_works.xml

    NAME:   NICK CONNELL
    ID:     S1623944

    FILE FOR DISPLAYING ROAD WORKS INFORMATION
    -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.nick.testapplication.RoadWorks"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
    android:id="@+id/lblRoadWorks"
    android:layout_width="match_parent"
    android:layout_height="38dp"
    android:text="@string/lblRoadWorks"
    android:textAlignment="center"
    android:textStyle="bold"
    android:textColor="@color/white"
    android:background="@color/headerBackground"
    android:textSize="20sp"/>

    <AutoCompleteTextView
        android:id="@+id/searchBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/searchHint"
        android:imeOptions="actionSend"
        android:inputType="text" />

    <ListView
        android:id="@+id/listViewRoadWorksRSS"
        android:layout_width="match_parent"
        android:layout_height="389dp" />

    <TextView
        android:id="@+id/lblNameSID"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:background="@color/colorPrimary"
        android:text="@string/lblNameSID"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/white"
        android:textStyle="bold" />
</LinearLayout>
